package frc.robot.vision.visionGSC;

public enum GSCOption {
    RED1,
    RED2,
    BLUE1,
    BLUE2,
    NOT_FOUND
}
