@startuml
'https://plantuml.com/class-diagram

BaseVision <|-- Vision
BaseVision <|-- VisionGSC
BaseVision o-- Limelight
Vision o-- VisionTarget
Vision *-- InnerTarget
Vision *-- OuterTarget
VisionTarget <|-- InnerTarget
VisionTarget <|-- OuterTarget
VisionGSC *-- GSCOption
InnerTarget o-- OuterTarget

skinparam class{
    BackgroundColor white
    ArrowColor black
    BorderColor black
}

abstract class BaseVision{
    Limelight limelight
    BaseVision()
    boolean hasTarget()
    void update()
}

class Vision{
    OuterTarget outerTarget;
    InnerTarget innerTarget;
    DoubleSupplier gyroYawAngle;
    VisionTarget chosenTarget;
    Pose2d currentPos;
    Rotation2d currentRotation;
    Vision()
    void chooseTarget()
    void updatePos()
    double DistanceToTargetWall()
}

abstract class VisionTarget{
    Limelight limelight
    DoubleSupplier gyroYawAngle
    DoubleSupplier turretAngleRTF
    Vector2dEx vectorTurretToTargetRTF
    Vector2dEx vectorRobotToTargetRTF
    double verticalAngleLimelightToTarget
    double horizontalAngleTargetToRobot
    double airDistanceTurretToTarget
    double horizontalAngleTargetToTurret
    void update()
}

class OuterTarget{
    OuterTarget()
}

class InnerTarget{
    OuterTarget outerTarget
    InnerTarget()
}

class VisionGSC{
    GSCOption chosenOption
    VisionGSC()
    double getTargetAreaPercentage()
    double getTargetHorizontalAngle()
    GSCOption determineBlueOrRed()
}

enum GSCOption {
    RED1
    RED2
    BLUE1
    BLUE2
    NOT_FOUND
}

class Limelight{
    Limelight instance
    NetworkTable networkTable
    Limelight()
    Limelight getInstance()
    void setPipeline()
    void setOperationMode()
    void setLedMode()
    void setStreamMode()
    void setTakeSnapshots()
    boolean targetFound()
    LimelightTarget getTarget()
    LimelightTarget getTargetWithRawCorners()
}



@enduml
